--- a/22_09/19_09_2022/airbnb-clone-backend/pyproject.toml
+++ b/22_09/19_09_2022/airbnb-clone-backend/pyproject.toml
@@ -12,6 +12,9 @@ python = "^3.9"
 Django = "^4.1.1"
 
 
+[tool.poetry.group.dev.dependencies]
+black = {version = "^22.8.0", allow-prereleases = true}
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
